[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lejepa"
version = "0.0.1"
dependencies = ["torch", "numpy", "loguru", "pytest"]
requires-python = ">=3.8"
authors = [
  {name = "Randall Balestriero", email = "randallbalestriero@gmail.com"},
]
maintainers = [
  {name = "Randall Balestriero", email = "randallbalestriero@gmail.com"}
]
description = "ToDo"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
classifiers = [
  "Programming Language :: Python"
]

[dependency-groups]
train = [
  "timm",
  "wandb",
  "hydra-core",
  "datasets",
  "huggingface-hub",
  "torchvision",
  "tqdm",
]

# On macOS, PyPI wheels already include MPS support — no special index needed.
# On Linux/Windows, pull CUDA 12.8 builds from the PyTorch index instead.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"